# pyUnite

./: .gitignore  pyproject.toml  requirements.txt
docs/: README.md  configuring.md
src/pyunite/: __main__.py  cli.py
src/pyunite/lib/: optimizer.py  reader.py  writer.py
