[project]
name = "pyUnite"
version = "0.0.0-alpha"
authors = [
    { name="Riley", email="riley@riley0122.dev" },
]
description = "Unite all of your python files into one single file"
readme="README.md"
requires-python=">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers"
]

[project.urls]
Homepage="https://github.com/riley0122/pyunite"
Issues="https://github.com/riley0122/pyunite/issues"

[project.scripts]
pyunite = "pyunite.cli:cli"